--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.dhrubajyoti</groupId>
-  <artifactId>java-docker-build</artifactId>
+  <artifactId>java-sample-app</artifactId>
   <packaging>jar</packaging>
   <version>1.0.0-SNAPSHOT</version>
-  <name>java-docker-build</name>
+  <name>java-sample-app</name>
 
   <licenses>
     <license>
